--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,18 @@
+:root {
+  --medium-blue: #826AED;
+  --silver: #C3BABA;
+  --brown: #754F44;
+  --russian-green: #659157;
+  --medium-sea-green: #58BC82;
+}
+
 .App {
+  left: 15%;
   margin: 10%;
-  display: flex;
-  flex-wrap: wrap;
+  display: grid;
+  grid-gap: 3vw;
+  grid-template-columns: 1fr 2fr 1fr;
+  grid-template-rows: auto;
 }
 
 .child {
@@ -9,21 +20,40 @@
 }
 
 btn {
+  grid-column: 3 / 4;
+  margin: 0;
+  padding: 0.5vw;
   width: fit-content;
   height: fit-content;
-  background: aqua;
+  background: var(--medium-sea-green);
+  color: white;
+  font-size: 3vh;
+  border-radius: 0.5vw;
+  transition-duration: 0.3s;
+}
+
+btn:hover {
+  cursor: pointer;
+  transform: scale(1.1)
 }
 
 #input {
+  grid-row: 2 / 3;
+  grid-column: 2 / 3;
+  padding: 0.5vw;
   margin-top: 3vh;
+  height: 1.5vw;
+  border-radius: 0.5vw;
+  border: 0.1vw solid black !important;
+  font-size: 3vh;
 }
 
 .grid {
+  grid-column: 2 / 3;
   display: grid;
   grid-gap: 0.3vw;
   grid-template-rows: 1fr 1fr 1fr;
   grid-template-columns: 1fr 1fr 1fr;
-  margin-right: 3vw;
 }
 
 .box {
@@ -31,7 +61,7 @@ btn {
   margin: none;
   width: 13vw;
   height: 20vh;
-  border: 0.1vw solid black;
+  border: 0.1vw solid black !important;
   border-radius: 0.5vw;
   justify-content: center;
   align-items: center;
